# flake_core

./: CMakeLists.txt
flake/: bytes.cpp  bytes.h  color.cpp  color.h  iterator.h  limits.h  macros.h  math.cpp  math.h  types.h  uuid.cpp  uuid.h  vec2.h
flake/data/gridmap/: gridchunk.h  gridmap.h  types.h  utils.cpp  utils.h
flake/std/types/: any.h  array.h  function.h  initializer_list.h  path.h  queue.h  smart_ptr.h  string.h  string_view.h  unordered_map.h  unordered_set.h  vector.h
flake/utils/: command.cpp  command.h  string.cpp  string.h
